# al2023-python

./: .gitignore  README.md  app.py  pyproject.toml
.chalice/: config.json
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
debug/: RestClient.http
src/: hello.py
src/api/: lambda_function.py
tests/api/: test_lambda_function.py
