[project]
name = "al2023-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "boto3>=1.35.54",
    "marshmallow>=3.23.1",
    "pg8000>=1.31.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1",   # missing type self and cls
    "E999",   # syntax error
    "UP027",  # unpacked list comprehension
    "PT004",  # pytest missing fixture name underscore
    "PT005",  # pytest incorrect fixture name underscore
    "D1",     # undocumented
    "TD001",  # invalid todo tag
    "TD002",  # missing todo author
    "TD003",  # missing todo link
    "PD011",  # pandas use of dot values
]
unfixable = [
    "F401",   # unused import
    "F841",   # unused variable
    "ERA001", # commented out code
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
    "src", "src/api"
]
testpaths = ["tests",]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
